
  - Internal code improvements.

  [Documentation]
  - Clarified the documentation on the isa option of attributes.

  - Fixed cut-and-paste error in CONTRIBUTING.md.

  - Fixed errors in the README.

  - Removed the INSTALL file.

  - Removed redundant section.

  [Tests]
  - Moved author tests into the xt directory.

  - Added more author tests.

  [Toolchain]
  - Improved Dist::Zilla configuration.

  - Stop regenerating MANIFEST.SKIP.

  - Add GitHub workflow to run tests.

v0.6.4    2025-08-03 12:03:08+01:00 Europe/London
  [Documentation]
  - README is now generated by Dist::Zilla::Plugin::UsefulReadme.

  - Added SUPPORT section and merged BUGS into it.

  [Bug Fixes]
  - Fixed module prerequisite metadata.

  [Tests]
  - Improved author tests.

  [Toolchain]
  - Improved Dist::Zilla configuration.

v0.6.3    2025-05-18 12:04:50+01:00 Europe/London
  [Documentation]
  - Updated the SEE ALSO section.

  - Added a security policy (SECURITY.md) and how to contribute (CONTRIBUTING.md) document.

  - Updated the copyright year.

  [Tests]
  - Added more author tests.

v0.6.2    2023-05-15 19:01:45+01:00 Europe/London
  [Documentation]
  - Documented support policy for older Perls.

  [Tests]
  - Increased recommended minimum version of Moo for MooX::TypeTiny tests.

v0.6.1    2023-01-12 14:25:42+00:00 Europe/London
  No changes sicne v0.6.0.

v0.6.0    2023-01-10 14:46:04+00:00 Europe/London (TRIAL RELEASE)
  [Incompatible Changes]
  - Minimum Perl version is v5.14.

  - The deprecated "wo" (write once) attribute type has been removed. Use "once" instead.

  [Documentation]
  - Bumped copyright year.

  - Added Sub::Trigger::Lock to SEE ALSO.

  - Documented support for older Perl versions.

  [Other]
  - Added GitHub Actions to run tests.

v0.5.4    2022-09-04 16:02:53+01:00 Europe/London
  [Other]
  - Sign distribution.

  - Update MANIFEST.SKIP.

v0.5.3    2022-04-03 17:42:59+01:00 Europe/London
  [Bug Fixes]